<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:visible="false"
            android:id="@+id/top_navigation_menu_item"
            android:title="@string/top_headlines_string" />
        <item
            android:visible="false"
            android:id="@+id/tech_navigation_menu_item"
            android:title="@string/technology_headlines_string" />
        <item
            android:visible="false"
            android:id="@+id/business_navigation_menu_item"
            android:title="@string/business_headlines_string" />
        <item
            android:visible="false"
            android:id="@+id/saved_navigation_menu_item"
            android:title="@string/archived_headlines_string"/>
    </group>
</menu>