...
            android:textColor="#99ffffff"
            android:textSize="12sp"
            android:textStyle="bold" />

        <ImageButton
            android:visibility="invisible"
            android:id="@+id/archive_news_ib"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/news_source_view"
            android:layout_margin="4dp" />

...
